--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Novo House</title>
+  <link rel="icon" href="favicon.png" type="image/png" />
   <style>
     * {
       margin: 0;
@@ -18,7 +19,7 @@
     }
 
     body {
-      background-image: url('background.jpg'); /* Replace with your image path */
+      background-image: url('background.jpg');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -28,6 +29,12 @@
       flex-direction: column;
       text-align: center;
       padding: 2rem;
+    }
+
+    .icon {
+      width: 80px;
+      height: auto;
+      margin-bottom: 1rem;
     }
 
     .logo {
@@ -63,7 +70,8 @@
   </style>
 </head>
 <body>
-  <img src="logo.png" alt="Logo" class="logo" /> <!-- Replace with your logo path -->
+  <img src="icon.png" alt="Icon" class="icon" />
+  <img src="logo.png" alt="Logo" class="logo" />
   <div class="tagline">ars supra omnia</div>
   <div class="pronunciation">ahrz / soo·prah / ohm·nee·ah</div>
   <div class="translation">art above all</div>
